// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute backed endpoint account name not found should return error 1`] = `
{
  "errorMessage": "Account with name QQQ could not be found",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692716431529,
  },
}
`;

exports[`execute backed endpoint should return success 1`] = `
{
  "data": {
    "result": 195605,
    "ripcord": false,
  },
  "result": 195605,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692716431529,
  },
}
`;

exports[`execute emgemx endpoint should return success 1`] = `
{
  "data": {
    "result": 1000000,
    "ripcord": false,
  },
  "result": 1000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1748007917250,
  },
}
`;

exports[`execute eurr endpoint should return success 1`] = `
{
  "data": {
    "result": 10000000,
    "ripcord": false,
  },
  "result": 10000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692617659477,
  },
}
`;

exports[`execute gift endpoint should return success 1`] = `
{
  "data": {
    "result": 10000000,
    "ripcord": false,
  },
  "result": 10000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1695648040048,
  },
}
`;

exports[`execute mco2 endpoint should return success 1`] = `
{
  "data": {
    "result": 3041044,
  },
  "result": 3041044,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1649070046577,
  },
}
`;

exports[`execute reserve endpoint should fail if client name is not present or wrong 1`] = `
{
  "error": {
    "message": "[Param: client] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute reserve endpoint should return success for emgemx 1`] = `
{
  "data": {
    "result": "1000000",
    "ripcord": false,
  },
  "result": "1000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute reserve endpoint should return success for m0 1`] = `
{
  "data": {
    "result": "1000000",
    "ripcord": false,
  },
  "result": "1000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute reserve endpoint should return success for re 1`] = `
{
  "data": {
    "result": "1000000",
    "ripcord": false,
  },
  "result": "1000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute reserve endpoint should return success for uranium 1`] = `
{
  "data": {
    "result": "1000000",
    "ripcord": false,
  },
  "result": "1000000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute stbt endpoint should return success 1`] = `
{
  "data": {
    "result": 72178807.56,
    "ripcord": false,
  },
  "result": 72178807.56,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1685710403604,
  },
}
`;

exports[`execute uranium endpoint should fail 1`] = `
{
  "errorMessage": "Response is missing response fields (expected: totalReserve & totalToken)",
  "ripcord": true,
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute uranium endpoint should return success 1`] = `
{
  "data": {
    "result": 1000000,
    "ripcord": false,
    "ripcordAsInt": 0,
  },
  "result": 1000000,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1751500917131,
  },
}
`;

exports[`execute usdr endpoint should return success 1`] = `
{
  "data": {
    "result": 39138216.32189752,
    "ripcord": false,
  },
  "result": 39138216.32189752,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1692831653859,
  },
}
`;
